added some changes to the background image

--- a/PharmaQueue/wwwroot/css/site.css
+++ b/PharmaQueue/wwwroot/css/site.css
@@ -3,9 +3,9 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-image: url('../images/capsules-close-up-drugs-161688.jpg');
+    background: url('../images/capsules-close-up-drugs-161688.jpg') no-repeat center center fixed;
     margin: 0;
-    background-size: cover;
+    background-size:cover;
 }
 
 /* Wrapping element */
@@ -53,4 +53,7 @@ footer {
 
 .navbar-inverse .btn-link {
     color: black;
+}
+.linkToBold{
+    font-weight:bold;
 }
