--- a/PharmaQueue/Views/Home/Index.cshtml
+++ b/PharmaQueue/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
             {
                 <tr>
                     <td>
-                        <a asp-controller="Prescriptions" asp-action="Details" asp-route-id="@item.PrescriptionId" class="category-title">
+                        <a asp-controller="Prescriptions" asp-action="Details" asp-route-id="@item.PrescriptionId" class=" linkToBold category-title">
                             @item.Name
                             @item.Strength
                         </a>
